structor signalR client

--- a/Tsoft.ChatService.Frontend/src/app/routes/chat/dashboard-chat/dashboard-chat.component.html
+++ b/Tsoft.ChatService.Frontend/src/app/routes/chat/dashboard-chat/dashboard-chat.component.html
@@ -1,3 +1,11 @@
-<p>
-  dashboard-chat works!
-</p>
+<nz-card>
+  <div class="wrapper">
+    <div style="width:300px;height: 100%;overflow: auto;float: left">
+      <app-available-user></app-available-user>
+    </div>
+    <div style="height: 100%;overflow: auto">
+      <app-chat-area></app-chat-area>
+    </div>
+  </div>
+
+</nz-card>
