--- a/Tsoft.ChatService.Frontend/src/app/routes/chat/components/available-user/available-user.component.html
+++ b/Tsoft.ChatService.Frontend/src/app/routes/chat/components/available-user/available-user.component.html
@@ -1,10 +1,21 @@
 <div class="container-available-user">
   <nz-list [nzDataSource]="listData" [nzRenderItem]="item" [nzItemLayout]="'vertical'">
     <ng-template #item let-item>
-      <nz-list-item (click)="onClickItem($event)">
+      <nz-list-item class="item" (click)="onClickItem($event)">
         <nz-skeleton [nzLoading]="loading" [nzActive]="true" [nzAvatar]="true" [nzParagraph]="{ rows: 0 }">
-          <nz-list-item-meta [nzAvatar]="item.avatar" [nzTitle]="nzTitle" [nzDescription]="item.description">
-            <ng-template #nzTitle><a href="{{ item.href }}">{{ item.title }}</a></ng-template>
+          <nz-list-item-meta [nzAvatar]="avatar" [nzTitle]="nzTitle" [nzDescription]="description">
+            <ng-template #avatar>
+              <img *ngIf="item.avatarUrl" [src]="item.avatarUrl" class="avatar">
+              <div *ngIf="!item.avatarUrl" class="avatar text">
+                {{ getName(item).charAt(0) }}
+                <div *ngIf="item.status == 1" class="online"></div>
+              </div>
+            </ng-template>
+            <ng-template #nzTitle><strong>{{ getName(item) }}</strong></ng-template>
+            <ng-template #description>
+              <div *ngIf="item.lastMessage">{{ item.lastMessage }}</div>
+              <div *ngIf="!item.lastMessage">{{ getName(item) + ' đã tham gia'}}</div>
+            </ng-template>
           </nz-list-item-meta>
         </nz-skeleton>
       </nz-list-item>
