--- a/Tsoft.ChatService.Frontend/src/app/routes/chat/components/available-user/available-user.component.less
+++ b/Tsoft.ChatService.Frontend/src/app/routes/chat/components/available-user/available-user.component.less
@@ -1,3 +1,39 @@
 .container-available-user {
   height: 100%;
 }
+
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #ccc;
+
+}
+
+.text {
+  font-size: 30px;
+  text-align: center;
+  justify-content: center;
+}
+
+.item {
+  cursor: pointer;
+  padding-left: 10px;
+}
+
+.item:hover {
+  background-color: #cff7d4;
+}
+
+.online {
+  width: 15px;
+  height: 15px;
+  background: #2F9A48;
+  position: absolute;
+  top: 76%;
+  right: 80%;
+  border-radius: 50%;
+  border: 2px solid white;
+}
