--- a/Tsoft.ChatService.Frontend/src/app/routes/chat/components/chat-area/chat-area.component.less
+++ b/Tsoft.ChatService.Frontend/src/app/routes/chat/components/chat-area/chat-area.component.less
@@ -1,3 +1,12 @@
+.wrapper-chat-area {
+  padding: 20px;
+  background: url('https://www.teahub.io/photos/full/70-707627_whats-app-background.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
 /* Chat containers */
 .container {
   border: 2px solid #dedede;
