--- a/Tsoft.ChatService.Frontend/src/app/routes/chat/dashboard-chat/dashboard-chat.component.less
+++ b/Tsoft.ChatService.Frontend/src/app/routes/chat/dashboard-chat/dashboard-chat.component.less
@@ -5,5 +5,6 @@
   overflow: hidden;
   /* relevant part */
   width: 100%;
-  height: calc(100vh - 165px);
+  height: calc(100vh - 110px);
+  background-color: white;
 }
