User online feature

--- a/Tsoft.ChatService.Frontend/src/app/routes/chat/components/available-user/available-user.component.less
+++ b/Tsoft.ChatService.Frontend/src/app/routes/chat/components/available-user/available-user.component.less
@@ -31,9 +31,9 @@
   width: 15px;
   height: 15px;
   background: #2F9A48;
-  position: absolute;
-  top: 76%;
-  right: 80%;
+  position: relative;
+  top: -20%;
+  right: -70%;
   border-radius: 50%;
   border: 2px solid white;
 }
