--- a/Tsoft.ChatService.Frontend/src/app/routes/chat/components/available-user/available-user.component.less
+++ b/Tsoft.ChatService.Frontend/src/app/routes/chat/components/available-user/available-user.component.less
@@ -2,14 +2,12 @@
   height: 100%;
 }
 
-
 .avatar {
   vertical-align: middle;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background-color: #ccc;
-
 }
 
 .text {
@@ -30,10 +28,14 @@
 .online {
   width: 15px;
   height: 15px;
-  background: #2F9A48;
+  background: #2f9a48;
   position: relative;
   top: -20%;
   right: -70%;
   border-radius: 50%;
   border: 2px solid white;
+}
+
+.ant-list-vertical .ant-list-item-meta {
+  margin-bottom: 0px !important;
 }
