--- a/Tsoft.ChatService.Frontend/src/app/routes/components/inputs/input-password/input-password.component.html
+++ b/Tsoft.ChatService.Frontend/src/app/routes/components/inputs/input-password/input-password.component.html
@@ -13,7 +13,7 @@
     <nz-input-group [nzSuffix]="suffixTemplate">
       <input [formControl]="ngControl.control" [attr.disabled]="disabled ? '' : null"
         [attr.readonly]="readonly ? '' : null" [type]="passwordVisible ? 'text' : 'password'" nz-input
-        placeholder="Nhập password" />
+        [placeholder]="placeholder" />
     </nz-input-group>
     <ng-template #suffixTemplate>
       <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'" (click)="passwordVisible = !passwordVisible"></i>
