--- a/Tsoft.ChatService.Frontend/src/app/routes/user-manager/user/create-user/create-user.component.html
+++ b/Tsoft.ChatService.Frontend/src/app/routes/user-manager/user/create-user/create-user.component.html
@@ -24,7 +24,7 @@
             </div>
             <div nz-col nzSpan="12">
               <app-input-password labelContent="{{ 'user-manager.employee.create.password' | translate }}"
-                formControlName="password">
+                placeholder="Nhập mật khẩu" formControlName="password">
               </app-input-password>
             </div>
           </div>
