--- a/Tsoft.ChatService.Frontend/src/app/routes/user-manager/user/detail-user/detail-user.component.html
+++ b/Tsoft.ChatService.Frontend/src/app/routes/user-manager/user/detail-user/detail-user.component.html
@@ -1,3 +1,86 @@
-<p>
-  detail-user works!
-</p>
+<page-header-wrapper>
+  <nz-card>
+    <form nz-form [formGroup]="editForm">
+      <div nz-row>
+        <div nz-col nzSpan="24">
+          <app-title-hearder-layout>{{'Đăng ký'}}</app-title-hearder-layout>
+        </div>
+      </div>
+      <div nz-row>
+        <app-button-save *ngIf="btnSave && btnSave.grantAccess" (onClick)="submit()"></app-button-save>
+        <app-button-edit text="{{'user-manager.change-password.title' | translate}}" (onClick)="openCreateModal()">
+        </app-button-edit>
+      </div>
+      <div nz-row [nzGutter]="18">
+        <div nz-col nzSpan="6">
+          <app-image-upload [width]="100" [height]="120" [removeImage]="visible" [avatarUrl]="formatUrlImage(avatarUrl)"
+            (onChangeImage)="onChangeImage($event)"></app-image-upload>
+        </div>
+        <div nz-col nzSpan="18">
+          <div nz-row [nzGutter]="18">
+            <div nz-col nzSpan="12">
+              <app-input-text labelContent="{{ 'user-manager.employee.create.username' | translate }}" [required]="true"
+                errorTip="{{ 'user-manager.employee.create.username.required' | translate }}"
+                formControlName="username">
+              </app-input-text>
+            </div>
+            <div nz-col nzSpan="12">
+              <app-input-email labelContent="{{ 'user-manager.employee.create.email' | translate }}"
+                errorTip="{{ 'user-manager.employee.create.email.required' | translate }}" formControlName="email">
+              </app-input-email>
+            </div>
+            <!-- <div nz-col nzSpan="12">
+              <app-input-password labelContent="{{ 'user-manager.employee.create.password' | translate }}"
+                formControlName="password">
+              </app-input-password>
+            </div> -->
+          </div>
+
+          <div nz-row [nzGutter]="18">
+            <div nz-col nzSpan="12">
+              <app-input-text labelContent="{{ 'user-manager.employee.create.name' | translate }}" [required]="true"
+                errorTip="{{ 'user-manager.employee.create.name.required' | translate }}" formControlName="fullname">
+              </app-input-text>
+            </div>
+            <div nz-col nzSpan="12" formGroupName="userDetail">
+              <nz-form-item>
+                <app-label-horizontal for="name" content="Giới tính">
+                </app-label-horizontal>
+                <nz-form-control [nzSpan]="16">
+                  <nz-select formControlName="gender">
+                    <nz-option [nzValue]="0" nzLabel="Nữ"></nz-option>
+                    <nz-option [nzValue]="1" nzLabel="Nam"></nz-option>
+                  </nz-select>
+                </nz-form-control>
+              </nz-form-item>
+            </div>
+          </div>
+          <div nz-row [nzGutter]="18">
+            <div nz-col nzSpan="12">
+              <app-input-text labelContent="{{ 'user-manager.employee.create.phone' | translate }}"
+                errorTip="{{ 'user-manager.employee.create.phone.validate' | translate }}"
+                formControlName="phoneNumber">
+              </app-input-text>
+            </div>
+            <div nz-col nzSpan="12" formGroupName="userDetail">
+              <app-date-picker labelContent="{{ 'user-manager.employee.create.birthdate' | translate }}"
+                formControlName="birthdate"></app-date-picker>
+            </div>
+          </div>
+
+          <div nz-row [nzGutter]="18">
+            <div nz-col nzSpan="12" formGroupName="userDetail">
+              <app-input-text labelContent="{{ 'user-manager.employee.create.address' | translate }}"
+                formControlName="address">
+              </app-input-text>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </form>
+  </nz-card>
+</page-header-wrapper>
+<app-change-password [isVisible]="isCreateModalVisible" (onCancel)="onCancelModel()" (onSave)="callBackChangePassword()"
+  [userId]="id">
+</app-change-password>
