--- a/Tsoft.ChatService.Frontend.V2/src/app/routes/chat/dashboard-chat/dashboard-chat.component.html
+++ b/Tsoft.ChatService.Frontend.V2/src/app/routes/chat/dashboard-chat/dashboard-chat.component.html
@@ -1,9 +1,11 @@
 <div class="wrapper">
   <div style="width:300px;height: 100%;overflow: auto;float: left">
-    <app-available-user [users]="users$ | async" [conversations]="conversations$ | async" [loading]="loading$ | async">
+    <app-available-user [conversations]="conversations$ | async" [users]="user$ | async"
+      [conversationLoading]="conversationLoading$ | async" [userLoading]="userLoading$ | async ">
     </app-available-user>
   </div>
   <div style="height: 100%">
-    <app-chat-area [selectedConversation]="selectedConversation$ | async"></app-chat-area>
+    <app-chat-area [selectedConversation]="selectedConversation$ | async" [messages]="messages$ | async">
+    </app-chat-area>
   </div>
 </div>
