--- a/Tsoft.ChatService.Frontend.V2/src/app/routes/chat/components/available-user/available-user.component.html
+++ b/Tsoft.ChatService.Frontend.V2/src/app/routes/chat/components/available-user/available-user.component.html
@@ -1,4 +1,4 @@
-<div class="container-available-user">
+<div class="container-available-user noselect">
   <nz-list [nzDataSource]="listData" [nzRenderItem]="item" [nzItemLayout]="'vertical'">
     <ng-template #item let-item>
       <nz-list-item class="item" (click)="onClickItem(item)">
