--- a/Tsoft.ChatService.Frontend/src/app/routes/chat/dashboard-chat/dashboard-chat.component.html
+++ b/Tsoft.ChatService.Frontend/src/app/routes/chat/dashboard-chat/dashboard-chat.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div style="width:300px;height: 100%;overflow: auto;float: left">
-    <app-available-user [users]="users$ | async" [conversations]="conversations$ | async" [loading]="loading$ | async">
+    <app-available-user [users]="users" [conversations]="conversations$ | async" [loading]="loading$ | async">
     </app-available-user>
   </div>
   <div style="height: 100%">
